<resources>
    <string name="app_name">MyPassword</string>
    <string name="empty_err_msg">Field cannot be empty!</string>
    <string name="email_err_msg">email must contain this format: XXX@XXX.XXX</string>
    <string name="passwordNotMatch_err_msg">Password doesn\'t match </string>
    <string name="usernameExists_err_msg">this username is in use</string>
    <string name="emailExists_err_msg">this email is in use</string>
    <string name="test_to_git">Test to Git</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Signinwithgoogle">Sign Up With Google</string>
    <string name="icon">Icon</string>
    <string name="password_in_one_place">PASSWORDS IN ONE PLACE</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="background">Background</string>
    <string name="title_activity_password">PasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="repeat_password">REPEAT PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="username">USERNAME</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
</resources>